--- a/index.css
+++ b/index.css
@@ -8,7 +8,6 @@ body {
 }
 
 :root {
-    --navbar-bg-color: hsl(0, 0%, 15%);
     --navbar-text-color: hsl(0, 0%, 85%);
     --navbar-text-color-focus: white;
     --navbar-bg-contrast: hsl(0, 0%, 25%);
@@ -29,11 +28,11 @@ body {
   #navbar {
     --navbar-height: 64px;
     position: fixed;
-    height: var(--navbar-height);
-    background-color: var(--navbar-bg-color);
     left: 0;
     right: 0;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
+    height: 120px;
+    background-color: #032236;
   }
 
   .navbar-container {
@@ -167,6 +166,23 @@ body {
     flex-direction: column;
     align-items: center;
     box-shadow: 0 20px 20px rgba(0, 0, 0, 0.3);
+  }
+
+
+
+  section {
+    padding-top: 150px;
+    padding-right: 40px;
+    padding-bottom: 100px;
+    padding-left: 40px;
+    max-width: 1000px;
+    margin: 0 auto;
+  }
+
+  #hero-buttons{
+    text-align: left;
+    flex-direction: row;
+    display: flex;
   }
 
   @media screen and (min-width: 700px) {
