--- a/index.css
+++ b/index.css
@@ -166,6 +166,7 @@ body {
     flex-direction: column;
     align-items: center;
     box-shadow: 0 20px 20px rgba(0, 0, 0, 0.3);
+    background-color: #032236;
   }
 
 
