--- a/index.css
+++ b/index.css
@@ -170,11 +170,10 @@ body {
   }
 
   section {
-    padding-top: 150px;
+    padding-top: 100px;
     padding-right: 40px;
     padding-bottom: 100px;
     padding-left: 40px;
-    max-width: 1000px;
     margin: 0 auto;
   }
 
@@ -182,6 +181,21 @@ body {
     text-align: left;
     flex-direction: row;
     display: flex;
+  }
+
+  #hero {
+    background-image: linear-gradient(rgba(3,34,54,0.5),rgba(3,34,54,0.5)),url("/images/Pexels-Photo-by-Sean-Whang-1.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  .inner-section {
+    max-width: 1000px;
+    margin: auto;
+  }
+
+  #services {
+    background-image: linear-gradient(rgba(0,0,0,0.77),rgba(0,0,0,0.77)),url("/images/services.png");
   }
 
 
