--- a/index.css
+++ b/index.css
@@ -273,21 +273,11 @@ body {
   }
   
   .button-hollow-blue {
-    border-top-color: #032236;
-    border-right-color: #032236;
-    border-bottom-color: #032236;
-    border-left-color: #032236;
     border-radius: 0px;
     text-transform: uppercase;
     font-weight: 600;
-    border-top-width: 2px;
-    border-right-width: 2px;
-    border-bottom-width: 2px;
-    border-left-width: 2px;
-    padding-left: 25px;
-    padding-right: 25px;
     background-color: rgba(3,34,54,0);
-    border: 1px solid rgba(3,34,54,0);
+    border: 2px solid #032236;
     padding: 15px 24px;
   }
 
@@ -323,6 +313,13 @@ body {
     padding-bottom: 30px;
   }
 
+  #resume-button {
+    margin-top: 20px;
+  }
+
+  #resume .flex-item-2 {
+    padding: 0 50px;
+  }
   @media screen and (max-width: 991px){
     h1{
       font-size: 38px;
@@ -345,6 +342,9 @@ body {
     }
     #projects-grid {
       text-align: center;
+    }
+    #resume .flex-item-2 {
+      margin-bottom: 50px;
     }
 
   }
