--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ body {
 
 :root {
     --navbar-text-color: hsl(0, 0%, 85%);
-    --navbar-text-color-focus: white;
+    --navbar-text-color-focus: #6bbadf;
     --navbar-bg-contrast: hsl(0, 0%, 25%);
   }
   
@@ -21,10 +21,12 @@ body {
   h1 {
     font-size: 70px;
     font-weight: 700;
+    margin-bottom: 20px;
   }
 
   h2 {
     font-size: 42px;
+    margin-bottom: 20px;
   }
 
   h3 {
@@ -33,6 +35,14 @@ body {
 
   h4 {
     font-size: 22px;
+  }
+
+  h5 {
+    font-size: 18px;
+  }
+
+  p {
+    font-size: 16px;
   }
 
   a {
@@ -76,13 +86,11 @@ body {
     color: var(--navbar-text-color);
     text-decoration: none;
     display: flex;
-    font-weight: 400;
+    font-weight: 500;
     align-items: center;
+    font-size: 18px;
   }
   
-  .home-link:is(:focus, :hover) {
-    color: var(--navbar-text-color-focus);
-  }
   
   .navbar-link {
     justify-content: center;
@@ -93,7 +101,6 @@ body {
   
   .navbar-link:is(:focus, :hover) {
     color: var(--navbar-text-color-focus);
-    background-color: var(--navbar-bg-contrast);
   }
 
   .navbar-logo {
@@ -217,6 +224,9 @@ body {
 
   #services {
     color: white;
+    background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url("/images/services.png");
+    background-repeat: no-repeat;
+    background-size: cover;
   }
 
   #hero {
@@ -227,12 +237,8 @@ body {
   }
 
   .inner-section {
-    max-width: 1000px;
+    max-width: 1120px;
     margin: auto;
-  }
-
-  #services {
-    background-image: linear-gradient(rgba(0,0,0,0.88),rgba(0,0,0,0.88)),url("/images/services.png");
   }
 
 
@@ -249,7 +255,8 @@ body {
   }
 
   .flex-item-3 {
-    width: 33.3%; 
+    width: 30%; 
+    padding: 0 10px;
   }
 
   .flex-button-container {
@@ -267,15 +274,32 @@ body {
     font-weight: 600;
     margin-right: 30px;
     background-color: #032236;
-    border: 1px solid #032236;
-    padding: 16px 25.6px;
-    
+    border: 2px solid #032236;
+    padding: 15px 24px;
+    text-decoration: none;
+  }
+
+  .button-solid-blue:hover {
+    background-color: rgba(3,34,54,0);
+    border: 2px solid #032236;
+    padding: 15px 24px;
+    text-decoration: none;
+
   }
 
   .button-cta {
     margin-top: 20px;
   }
-  
+
+  .button-cta:hover {
+    text-decoration: none;
+  }
+
+  #resume-button .button-cta:hover {
+    background-color: white;
+    color: #032236;
+  }
+
   .button-hollow-blue {
     border-radius: 0px;
     text-transform: uppercase;
@@ -283,6 +307,15 @@ body {
     background-color: rgba(3,34,54,0);
     border: 2px solid #032236;
     padding: 15px 24px;
+    text-decoration: none;
+
+  }
+
+  .button-hollow-blue:hover {
+    background-color: #032236;
+    border: 2px solid #032236;
+    padding: 15px 24px;
+    text-decoration: none;
   }
 
   #hero-buttons a {
@@ -292,7 +325,6 @@ body {
   
   #hero-buttons a:hover {
     color: #d2cb95;
-    text-decoration: underline;
   }
 
   #resume {
@@ -318,19 +350,42 @@ body {
   }
 
   #resume-button {
-    margin-top: 20px;
+    margin-top: 50px;
+  }
+
+  #linkedin-link {
+    margin-top: 50px;
   }
 
   #resume .flex-item-2 {
-    padding: 0 50px;
+    padding: 0 35px;
   }
 
   #project-card {
-    background-color: #b3bcc9;
     margin: 0 20px;
-    border-radius: 10px;
-    
+    border-radius: 5px;
+    box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%);
+    transition: 0.3s;
+    min-height: 125px;
   }
+
+
+  .card-container {
+    padding: 17px 17px;
+  }
+
+  #project-card a {
+    color: black;
+    text-decoration: none;
+  }
+
+  #project-card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
+
+
+
+
   
   @media screen and (max-width: 991px){
     h1{
